--- a/third_week_practice_app/pubspec.yaml
+++ b/third_week_practice_app/pubspec.yaml
@@ -60,12 +60,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+
+  flutter:
+
+    fonts:
+      - family: Noto Sans KR
+      - fonts:
+      - asset: font/NotoSansKR-Medium.otf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
